--- a/package.xml
+++ b/package.xml
@@ -6,6 +6,10 @@
   <maintainer email="jpanikulam@ufl.edu">Jacob Panikulam</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>rostest</build_depend>
+  <build_depend>rostest</build_depend>
+  <run_depend>rospy</run_depend>
+
   <export>
   </export>
 </package>
