--- a/utils/mil_tools/package.xml
+++ b/utils/mil_tools/package.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <package>
-  <name>sub8_ros_tools</name>
-  <version>1.0.0</version>
+  <name>mil_tools</name>
+  <version>2.0.0</version>
   <description>The sub8_ros_tools package</description>
   <maintainer email="jpanikulam@ufl.edu">Jacob Panikulam</maintainer>
+  <maintainer email="mattlangford95@ufl.edu">Matthew Langford</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rostest</build_depend>
