GREAT MERGE: convert sub8_sonar to mil_passive_sonar
Added 'passive' to the name because we now have an imaging sonar.

--- a/drivers/mil_passive_sonar/package.xml
+++ b/drivers/mil_passive_sonar/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>sub8_sonar</name>
+  <name>mil_passive_sonar</name>
   <version>1.0.0</version>
-  <description>The sub8_sonar package</description>
+  <description>Package for multilateration and passive sonar</description>
 
   <maintainer email="Matthew.langford95@gmail.com">Matthew Langford</maintainer>
   <maintainer email="dsoto@ufl.edu">David Soto</maintainer>
@@ -13,6 +13,4 @@
   <build_depend>rospy</build_depend>
   <run_depend>rospy</run_depend>
 
-  <export>
-  </export>
 </package>
