--- a/mil_tools/package.xml
+++ b/mil_tools/package.xml
@@ -9,7 +9,11 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rostest</build_depend>
+  <build_depend>roscpp</build_depend>
+  <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+  <build_depend>cv_bridge</build_depend>
+  <run_depend>cv_bridge</run_depend>
   <export>
   </export>
 </package>
