--- a/perception/mil_vision/package.xml
+++ b/perception/mil_vision/package.xml
@@ -19,6 +19,8 @@
   <run_depend>cv_bridge</run_depend>
   <build_depend>mil_msgs</build_depend>
   <run_depend>mil_msgs</run_depend>
+  <build_depend>mil_tools</build_depend>
+  <run_depend>mil_tools</run_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
   <build_depend>std_msgs</build_depend>
