--- a/utils/mil_msgs/package.xml
+++ b/utils/mil_msgs/package.xml
@@ -14,6 +14,7 @@
   <build_depend>message_runtime</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
@@ -22,6 +23,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
   <run_depend>message_generation</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>actionlib_msgs</run_depend>
