PASSIVE SONAR: overhaul of sonar driver package
Multilateration python pkg:
* Functions for finding the LS intersection of 2D or 3D lines were added
* A function to calculate the maximum possible dtoa for a pair of receivers was added
* A function to find the delay between two nearly identical signals was added
* Added docstrings for all functions

Passive Sonar driver node:
* All configurale elements wwere made rosparams, an example launch is given
* Magic constants have been removed
* Repetitive code has been refactored
* Added visualization of headings and position estimate in RVIZ
* Added service to reset position estimate
* Removed dependence on SubjuGator msgs
* Added standalone function to receive signals from a serial port
* Added function to consolidate the loading of rosparams
* Added docstrings for all functions
* Added timeout for listening to receiver board
* Restructured code to work with an arbitrary number of receivers in an
  arbitrary arrangement
* Remove dependence on sub8_alarms

--- a/drivers/mil_passive_sonar/CMakeLists.txt
+++ b/drivers/mil_passive_sonar/CMakeLists.txt
@@ -7,13 +7,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_python_setup()
 
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES sub8_sonar
-#  CATKIN_DEPENDS rospy
-#  DEPENDS system_lib
-)
+catkin_package()
 
-include_directories(
-  ${catkin_INCLUDE_DIRS}
+include_directories(${catkin_INCLUDE_DIRS}
 )
