PASSIVE SONAR: remove dependence on mil_msgs
All srvs were moved to the inside of the pkg. This will allow us to open source
the pkg with minimal dependencies.

Added descriptive comments to the .srv files.

--- a/drivers/mil_passive_sonar/CMakeLists.txt
+++ b/drivers/mil_passive_sonar/CMakeLists.txt
@@ -1,13 +1,34 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(mil_passive_sonar)
 
-find_package(catkin REQUIRED COMPONENTS
-  rospy
+find_package(catkin
+  REQUIRED COMPONENTS
+    rospy
+    message_generation
+    message_runtime
+    tf2
+)
+
+add_service_files(
+  FILES
+    GetPulseHeading.srv
+    EstimatePingerPosition.srv
+    ResetPositionEstimate.srv
+    StartBagging.srv
+    SaveBag.srv
+    SetFrequency.srv
 )
 
 catkin_python_setup()
 
-catkin_package()
+generate_messages(DEPENDENCIES std_msgs)
+
+catkin_package(
+  CATKIN_DEPENDS
+    message_generation
+    message_runtime
+    tf2
+)
 
 include_directories(${catkin_INCLUDE_DIRS}
 )
