--- a/drivers/mil_passive_sonar/package.xml
+++ b/drivers/mil_passive_sonar/package.xml
@@ -12,5 +12,11 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <run_depend>rospy</run_depend>
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_generation</run_depend>
+  <build_depend>message_runtime</build_depend>
+  <run_depend>message_runtime</run_depend>
+  <build_depend>tf2</build_depend>
+  <run_depend>tf2</run_depend>
 
 </package>
