PASSIVE SONAR: address PR17 comments
* Rename bagging to logging to avoid confusion
* Remove dependency on sklearn
* Replace asserions with exceptions
* Provide link to explanation of LS intersection code
* Fix naming inconsistencies
* Fix bug in one of the solver cost fucntions
* Add correction of non-decimal ascii characters (serial)
* Add ros shutdown checking to serial comms code
* Clean up matplotlib plots

--- a/drivers/mil_passive_sonar/CMakeLists.txt
+++ b/drivers/mil_passive_sonar/CMakeLists.txt
@@ -14,8 +14,8 @@ add_service_files(
     GetPulseHeading.srv
     EstimatePingerPosition.srv
     ResetPositionEstimate.srv
-    StartBagging.srv
-    SaveBag.srv
+    StartLogging.srv
+    SaveLog.srv
     SetFrequency.srv
 )
 
