Ogrid decay and attributes

--- a/perception/point_cloud_object_detection_and_recognition/launch/pcodar.yaml
+++ b/perception/point_cloud_object_detection_and_recognition/launch/pcodar.yaml
@@ -1,10 +1,12 @@
 map_size_meters: 2100.0
 roi_size_meters: 210.0
 voxel_size_meters: 0.30
-min_hits_for_occupancy: 10
+min_hits_for_occupancy: 4
 max_hits_in_cell: 200
 min_object_seperation_distance: 3.0
+
 ogrid_inflation_cell: 2
+distance_decay_factor: 0.01
 
 executive_rate: 10
 
