--- a/perception/point_cloud_object_detection_and_recognition/CMakeLists.txt
+++ b/perception/point_cloud_object_detection_and_recognition/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_ros
   cv_bridge
   dynamic_reconfigure
-  navigator_tools
+  mil_bounds
 )
 
 ###################################################
