BOUNDS: make limits larger to support ECEF/spherical frames

--- a/gnc/mil_bounds/cfg/BoundsConfig.cfg
+++ b/gnc/mil_bounds/cfg/BoundsConfig.cfg
@@ -3,20 +3,20 @@ from dynamic_reconfigure.parameter_generator_catkin import ParameterGenerator, s
 
 gen = ParameterGenerator()
 gen.add("frame", str_t, 0, "Frame of the bounds", "map")
-gen.add("x1", double_t, 0, "X coordinate of the first corner", 0, -10000, 10000)
-gen.add("y1", double_t, 0, "Y coordinate of the first corner", 0, -10000, 10000)
-gen.add("z1", double_t, 0, "Z coordinate of the first corner", 0, -10000, 10000)
+gen.add("x1", double_t, 0, "X coordinate of the first corner", 0, -1E10, 1E10)
+gen.add("y1", double_t, 0, "Y coordinate of the first corner", 0, -1E10, 1E10)
+gen.add("z1", double_t, 0, "Z coordinate of the first corner", 0, -1E10, 1E10)
 
-gen.add("x2", double_t, 100, "X coordinate of the second corner", 0, -10000, 10000)
-gen.add("y2", double_t, 0, "Y coordinate of the second corner", 0, -10000, 10000)
-gen.add("z2", double_t, 0, "Z coordinate of the second corner", 0, -10000, 10000)
+gen.add("x2", double_t, 100, "X coordinate of the second corner", 0, -1E10, 1E10)
+gen.add("y2", double_t, 0, "Y coordinate of the second corner", 0, -1E10, 1E10)
+gen.add("z2", double_t, 0, "Z coordinate of the second corner", 0, -1E10, 1E10)
 
-gen.add("x3", double_t, 100, "X coordinate of the third corner", 0, -10000, 10000)
-gen.add("y3", double_t, 100, "Y coordinate of the third corner", 0, -10000, 10000)
-gen.add("z3", double_t, 0, "Z coordinate of the third corner", 0, -10000, 10000)
+gen.add("x3", double_t, 100, "X coordinate of the third corner", 0, -1E10, 1E10)
+gen.add("y3", double_t, 100, "Y coordinate of the third corner", 0, -1E10, 1E10)
+gen.add("z3", double_t, 0, "Z coordinate of the third corner", 0, -1E10, 1E10)
 
-gen.add("x4", double_t, 0, "X coordinate of the fourth corner", 0, -10000, 10000)
-gen.add("y4", double_t, 100, "Y coordinate of the fourth corner", 0, -10000, 10000)
-gen.add("z4", double_t, 0, "Z coordinate of the fourth corner", 0, -10000, 10000)
+gen.add("x4", double_t, 0, "X coordinate of the fourth corner", 0, -1E10, 1E10)
+gen.add("y4", double_t, 100, "Y coordinate of the fourth corner", 0, -1E10, 1E10)
+gen.add("z4", double_t, 0, "Z coordinate of the fourth corner", 0, -1E10, 1E10)
 
 exit(gen.generate("mil_bounds", "mil_bounds", "Bounds"))
