SIMULATION: add pcodar simulator to gazebo

--- a/simulation/mil_gazebo/CMakeLists.txt
+++ b/simulation/mil_gazebo/CMakeLists.txt
@@ -26,3 +26,16 @@ target_link_libraries(mil_model_heading
   ${GAZEBO_LIBRARIES}
 )
 add_dependencies(mil_model_heading ${catkin_EXPORTED_TARGETS})
+
+# Add pcodar_gazebo library
+add_library(
+    pcodar_gazebo
+        src/pcodar_gazebo.cpp
+)
+target_link_libraries(pcodar_gazebo
+  ${catkin_LIBRARIES}
+  ${GAZEBO_LIBRARIES}
+)
+add_dependencies(pcodar_gazebo
+  ${catkin_EXPORTED_TARGETS}
+)
