PCODAR: depend on roslaunch

--- a/perception/point_cloud_object_detection_and_recognition/CMakeLists.txt
+++ b/perception/point_cloud_object_detection_and_recognition/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   dynamic_reconfigure
   mil_bounds
+  roslaunch
 )
 
 ###################################################
