--- a/perception/point_cloud_object_detection_and_recognition/package.xml
+++ b/perception/point_cloud_object_detection_and_recognition/package.xml
@@ -37,4 +37,6 @@
   <build_depend>dynamic_reconfigure</build_depend>
   <run_depend>dynamic_reconfigure</run_depend>
 
+  <test_depend>roslaunch</test_depend>
+
 </package>
