SIMULATION: expand PCODAR simulation to fill ogrid

--- a/simulation/mil_gazebo/CMakeLists.txt
+++ b/simulation/mil_gazebo/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
   gazebo_dev
   gazebo_ros
   mil_msgs
+  point_cloud_object_detection_and_recognition
 )
 
 catkin_package(INCLUDE_DIRS include)
