--- a/drivers/mil_usb_to_can/package.xml
+++ b/drivers/mil_usb_to_can/package.xml
@@ -6,6 +6,8 @@
   <maintainer email="kallen@todo.todo">kallen</maintainer>
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>serial</exec_depend>
 </package>
